figured out how to search in the api

--- a/getting_bsky_data.ipynb
+++ b/getting_bsky_data.ipynb
@@ -145,9 +145,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d02545c-c3b0-416c-a449-8e947dde468f",
+   "metadata": {},
+   "source": [
+    "### Trying a search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "522fcde1-16e9-4748-8a3d-9ce564f8224d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "8bb35508-a866-4944-9e4c-e42b40e8efd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_search(query):\n",
+    "    print(query, 'Search Results:\\n')\n",
+    "    results = client.app.bsky.feed.search_posts({'q': query, 'limit': 10, 'sort': 'top'})\n",
+    "    results_dict = results.model_dump()\n",
+    "    for post in results_dict['posts']:\n",
+    "        text = post['record']['text']\n",
+    "        author = post['author']['handle']\n",
+    "        print(author+':', text+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "3157d23b-28f6-4ee3-af5c-2332c1ed90b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unalive Search Results:\n",
+      "\n",
+      "baratiddys.bsky.social: postponing my unalive\n",
+      "\n",
+      "kingserpentico.bsky.social: I *AM* on vacation and people still wanna unalive me at work.\n",
+      "\n",
+      "franken-pattern.bsky.social: Muskrat is going to unalive the FDIC\n",
+      "\n",
+      "sixfootfiveguy.com: An app for physician-assisted unalive: \n",
+      "\n",
+      "Snuffies\n",
+      "\n",
+      "daniellakrn.bsky.social: Or have a kid that wants to unalive themselves every night.\n",
+      "\n",
+      "verynormalguy.bsky.social: wait, people actually say unalive? we’re all so cooked\n",
+      "\n",
+      "acab.dad: Cw: suicide\n",
+      "\n",
+      "You don’t have to say “unalive” here. You don’t have to say “sewercide” or any other euphemism here. Use the actual word, and you have the added bonus of it hitting someone’s mute words so they don’t see it if it’s triggering\n",
+      "\n",
+      "aliothfox.ursamajorartworks.com: Y'all, please stop saying \"unalive\" and \"self-delete\" and so forth. There's no algorithm to fight here and a lot of people have the word \"suicide\" muted for a reason. The euphemisms are neither cute nor helpful.\n",
+      "\n",
+      "wolftexvet.bsky.social: Unalive them all!\n",
+      "\n",
+      "ondma.com: Cannot happen unless he's unalive. Does the proposal also state to make him unalive?  If so, i might be swayed on promoting it 😉\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_search('unalive')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a849422-0249-48ee-b22d-bbc506a3c682",
+   "id": "e5884c3d-0c49-47fe-bcd2-2d960b58ac99",
    "metadata": {},
    "outputs": [],
    "source": []
