added plots and topic modeling

--- a/getting_unalive_data.ipynb
+++ b/getting_unalive_data.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "328a9505-6174-4def-a088-5464ced3a7e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ProfileViewDetailed(did='did:plc:66lizgbz577cdzpwnfyox3g6', handle='sararosenauling.bsky.social', associated=ProfileAssociated(chat=None, feedgens=0, labeler=False, lists=0, starter_packs=0, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:66lizgbz577cdzpwnfyox3g6/bafkreicddmiczeju5vfi5yxgp2oosshkakweumupixgkofwwkq6jp3nqiq@jpeg', banner='https://cdn.bsky.app/img/banner/plain/did:plc:66lizgbz577cdzpwnfyox3g6/bafkreih3qtqbp27r3sq6jskcn4wmb7oxmbbbt6p3lcmhd5zbqi6ww5k5pm@jpeg', created_at='2023-06-25T12:38:14.621Z', description='she/her - Sociolinguist studying the internet at Pitt! Also into kpop/kdrama, musicals, the Phillies, cross stiching and crocheting, and singing in general\\n', display_name='Sara Rosenau', followers_count=938, follows_count=1067, indexed_at='2024-11-11T20:50:23.741Z', joined_via_starter_pack=None, labels=[], pinned_post=None, posts_count=321, viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by=None, following=None, known_followers=KnownFollowers(count=480, followers=[ProfileViewBasic(did='did:plc:qrllvid7s54k4hnwtqxwetrf', handle='joshuajfriedman.com', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='following', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:qrllvid7s54k4hnwtqxwetrf/bafkreihknkschqffbspk4lk7qtf2y2bgx36sirxw3ygztyqe3te2vlhjla@jpeg', created_at='2023-04-27T14:31:59.735Z', display_name='Joshua J. Friedman', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:qrllvid7s54k4hnwtqxwetrf/app.bsky.graph.follow/3k3cwub2rkp24', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3k3cxsrkcgr2m', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:desbxywnn2ou5h4hr7mipzom', handle='shaonta.bsky.social', associated=None, avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:desbxywnn2ou5h4hr7mipzom/bafkreia4rgcpwsalt5mbcg2uao45ztz4tpihnz554bwbdiws6p6nykotkm@jpeg', created_at='2023-10-31T00:48:16.474Z', display_name='Dr. Shaonta’ Allen', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:desbxywnn2ou5h4hr7mipzom/app.bsky.graph.follow/3lb2nirkfbd27', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3lazntx2gty2v', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:3rxcq5wacdop5thjoh3sny3p', handle='brooklynmarie.bsky.social', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='following', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:3rxcq5wacdop5thjoh3sny3p/bafkreiac5czcxmoi6ebhx56adtu3dm47mvlhjxlnqglxs4rkgmgzwf4t5m@jpeg', created_at='2023-04-27T22:33:20.589Z', display_name='Brooke', labels=[Label(cts='1970-01-01T00:00:00.000Z', src='did:plc:3rxcq5wacdop5thjoh3sny3p', uri='at://did:plc:3rxcq5wacdop5thjoh3sny3p/app.bsky.actor.profile/self', val='!no-unauthenticated', cid='bafyreifzxgkekwntquhrhncnvemzdekkuvv362nbb7e6l7ok42j6dd3i4q', exp=None, neg=None, sig=None, ver=None, py_type='com.atproto.label.defs#label')], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:3rxcq5wacdop5thjoh3sny3p/app.bsky.graph.follow/3lapnni3qfo2r', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3lapqcqbiee2h', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:5crnmuynyoly62tsimfxnl6k', handle='caitlinmoriah.bsky.social', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='following', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:5crnmuynyoly62tsimfxnl6k/bafkreicnhpq3rlppejzq3vs6rqnvj4dq6qqo6e6cploc7m4rgwdbsodqpu@jpeg', created_at='2023-04-30T17:39:40.030Z', display_name='dr. caitlin m. green', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:5crnmuynyoly62tsimfxnl6k/app.bsky.graph.follow/3jz63ga6v7s2f', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3jz5xkd33y42r', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:2bppr6lzjxvpcrp5lho6jfwx', handle='focusfronting.bsky.social', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='all', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:2bppr6lzjxvpcrp5lho6jfwx/bafkreidxaw7yuatzzq7ykplfkqamln5a4nyx4pou4tj2e46ioy4gtnspfq@jpeg', created_at='2023-04-27T19:52:09.864Z', display_name='katie', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:2bppr6lzjxvpcrp5lho6jfwx/app.bsky.graph.follow/3jzamujhuf52i', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3jz5x5wjrf42r', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic')], py_type='app.bsky.actor.defs#knownFollowers'), muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewDetailed')"
+       "ProfileViewDetailed(did='did:plc:66lizgbz577cdzpwnfyox3g6', handle='sararosenauling.bsky.social', associated=ProfileAssociated(chat=None, feedgens=0, labeler=False, lists=0, starter_packs=0, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:66lizgbz577cdzpwnfyox3g6/bafkreicddmiczeju5vfi5yxgp2oosshkakweumupixgkofwwkq6jp3nqiq@jpeg', banner='https://cdn.bsky.app/img/banner/plain/did:plc:66lizgbz577cdzpwnfyox3g6/bafkreih3qtqbp27r3sq6jskcn4wmb7oxmbbbt6p3lcmhd5zbqi6ww5k5pm@jpeg', created_at='2023-06-25T12:38:14.621Z', description='she/her - Sociolinguist studying the internet at Pitt! Also into kpop/kdrama, musicals, the Phillies, cross stiching and crocheting, and singing in general\\n', display_name='Sara Rosenau', followers_count=939, follows_count=1067, indexed_at='2024-11-11T20:50:23.741Z', joined_via_starter_pack=None, labels=[], pinned_post=None, posts_count=321, viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by=None, following=None, known_followers=KnownFollowers(count=480, followers=[ProfileViewBasic(did='did:plc:qrllvid7s54k4hnwtqxwetrf', handle='joshuajfriedman.com', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='following', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:qrllvid7s54k4hnwtqxwetrf/bafkreihknkschqffbspk4lk7qtf2y2bgx36sirxw3ygztyqe3te2vlhjla@jpeg', created_at='2023-04-27T14:31:59.735Z', display_name='Joshua J. Friedman', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:qrllvid7s54k4hnwtqxwetrf/app.bsky.graph.follow/3k3cwub2rkp24', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3k3cxsrkcgr2m', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:desbxywnn2ou5h4hr7mipzom', handle='shaonta.bsky.social', associated=None, avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:desbxywnn2ou5h4hr7mipzom/bafkreia4rgcpwsalt5mbcg2uao45ztz4tpihnz554bwbdiws6p6nykotkm@jpeg', created_at='2023-10-31T00:48:16.474Z', display_name='Dr. Shaonta’ Allen', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:desbxywnn2ou5h4hr7mipzom/app.bsky.graph.follow/3lb2nirkfbd27', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3lazntx2gty2v', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:3rxcq5wacdop5thjoh3sny3p', handle='brooklynmarie.bsky.social', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='following', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:3rxcq5wacdop5thjoh3sny3p/bafkreiac5czcxmoi6ebhx56adtu3dm47mvlhjxlnqglxs4rkgmgzwf4t5m@jpeg', created_at='2023-04-27T22:33:20.589Z', display_name='Brooke', labels=[Label(cts='1970-01-01T00:00:00.000Z', src='did:plc:3rxcq5wacdop5thjoh3sny3p', uri='at://did:plc:3rxcq5wacdop5thjoh3sny3p/app.bsky.actor.profile/self', val='!no-unauthenticated', cid='bafyreifzxgkekwntquhrhncnvemzdekkuvv362nbb7e6l7ok42j6dd3i4q', exp=None, neg=None, sig=None, ver=None, py_type='com.atproto.label.defs#label')], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:3rxcq5wacdop5thjoh3sny3p/app.bsky.graph.follow/3lapnni3qfo2r', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3lapqcqbiee2h', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:5crnmuynyoly62tsimfxnl6k', handle='caitlinmoriah.bsky.social', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='following', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:5crnmuynyoly62tsimfxnl6k/bafkreicnhpq3rlppejzq3vs6rqnvj4dq6qqo6e6cploc7m4rgwdbsodqpu@jpeg', created_at='2023-04-30T17:39:40.030Z', display_name='dr. caitlin m. green', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:5crnmuynyoly62tsimfxnl6k/app.bsky.graph.follow/3jz63ga6v7s2f', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3jz5xkd33y42r', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic'), ProfileViewBasic(did='did:plc:2bppr6lzjxvpcrp5lho6jfwx', handle='focusfronting.bsky.social', associated=ProfileAssociated(chat=ProfileAssociatedChat(allow_incoming='all', py_type='app.bsky.actor.defs#profileAssociatedChat'), feedgens=None, labeler=None, lists=None, starter_packs=None, py_type='app.bsky.actor.defs#profileAssociated'), avatar='https://cdn.bsky.app/img/avatar/plain/did:plc:2bppr6lzjxvpcrp5lho6jfwx/bafkreidxaw7yuatzzq7ykplfkqamln5a4nyx4pou4tj2e46ioy4gtnspfq@jpeg', created_at='2023-04-27T19:52:09.864Z', display_name='katie', labels=[], viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by='at://did:plc:2bppr6lzjxvpcrp5lho6jfwx/app.bsky.graph.follow/3jzamujhuf52i', following='at://did:plc:66lizgbz577cdzpwnfyox3g6/app.bsky.graph.follow/3jz5x5wjrf42r', known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewBasic')], py_type='app.bsky.actor.defs#knownFollowers'), muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewDetailed')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "df5c308d-0b57-4488-99f6-8e306751f69b",
    "metadata": {},
    "outputs": [],
@@ -62,38 +62,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e093879a-aa2e-4263-b84d-2a4030bfc9a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'created_at': '2025-04-15T02:50:06.393Z',\n",
-       " 'text': 'We should unalive Caesar?',\n",
+       "{'author': {'did': 'did:plc:6bzr3x2js7436xj46zfi5xxo',\n",
+       "  'handle': 'shinyquagsire.bowser.gay',\n",
+       "  'associated': {'chat': {'allow_incoming': 'all',\n",
+       "    'py_type': 'app.bsky.actor.defs#profileAssociatedChat'},\n",
+       "   'feedgens': None,\n",
+       "   'labeler': None,\n",
+       "   'lists': None,\n",
+       "   'starter_packs': None,\n",
+       "   'py_type': 'app.bsky.actor.defs#profileAssociated'},\n",
+       "  'avatar': 'https://cdn.bsky.app/img/avatar/plain/did:plc:6bzr3x2js7436xj46zfi5xxo/bafkreib2s2qnzbrvugmrb65lzgcgpz4a76f5r45gpqw35vuxkcy4xy4h24@jpeg',\n",
+       "  'created_at': '2023-06-27T17:54:16.574Z',\n",
+       "  'display_name': 'Shiny Quagsire',\n",
+       "  'labels': [],\n",
+       "  'viewer': {'blocked_by': False,\n",
+       "   'blocking': None,\n",
+       "   'blocking_by_list': None,\n",
+       "   'followed_by': None,\n",
+       "   'following': None,\n",
+       "   'known_followers': None,\n",
+       "   'muted': False,\n",
+       "   'muted_by_list': None,\n",
+       "   'py_type': 'app.bsky.actor.defs#viewerState'},\n",
+       "  'py_type': 'app.bsky.actor.defs#profileViewBasic'},\n",
+       " 'cid': 'bafyreidcnzoubgojjvsu3wzoa5ebjwjhswzzubdyyylw4yr5aackieytmm',\n",
+       " 'indexed_at': '2025-04-17T21:52:53.150Z',\n",
+       " 'record': {'created_at': '2025-04-17T21:52:50.641Z',\n",
+       "  'text': \"In POSIX.1-2025 they're adding an `unalive` command, so that TikTok hacker tutorials can use the portable interface we all know and love to unalive processes on UNIX and Unix-like machines\",\n",
+       "  'embed': None,\n",
+       "  'entities': None,\n",
+       "  'facets': None,\n",
+       "  'labels': None,\n",
+       "  'langs': ['en'],\n",
+       "  'reply': None,\n",
+       "  'tags': None,\n",
+       "  'py_type': 'app.bsky.feed.post'},\n",
+       " 'uri': 'at://did:plc:6bzr3x2js7436xj46zfi5xxo/app.bsky.feed.post/3ln23q77j4k2v',\n",
        " 'embed': None,\n",
-       " 'entities': None,\n",
-       " 'facets': None,\n",
-       " 'labels': None,\n",
-       " 'langs': ['en'],\n",
-       " 'reply': {'parent': {'cid': 'bafyreiamstemsuf2nk5tckr6aylab6tmbu7iy6e3v336yfagt4x5uhp5yy',\n",
-       "   'uri': 'at://did:plc:awzzrtrcrvpnxi3ph2sbhxwv/app.bsky.feed.post/3lmt2lhdlwk2l',\n",
-       "   'py_type': 'com.atproto.repo.strongRef'},\n",
-       "  'root': {'cid': 'bafyreiamstemsuf2nk5tckr6aylab6tmbu7iy6e3v336yfagt4x5uhp5yy',\n",
-       "   'uri': 'at://did:plc:awzzrtrcrvpnxi3ph2sbhxwv/app.bsky.feed.post/3lmt2lhdlwk2l',\n",
-       "   'py_type': 'com.atproto.repo.strongRef'},\n",
-       "  'py_type': 'app.bsky.feed.post#replyRef'},\n",
-       " 'tags': None,\n",
-       " 'py_type': 'app.bsky.feed.post'}"
+       " 'labels': [],\n",
+       " 'like_count': 14,\n",
+       " 'quote_count': 0,\n",
+       " 'reply_count': 1,\n",
+       " 'repost_count': 2,\n",
+       " 'threadgate': None,\n",
+       " 'viewer': {'embedding_disabled': False,\n",
+       "  'like': None,\n",
+       "  'pinned': None,\n",
+       "  'reply_disabled': None,\n",
+       "  'repost': None,\n",
+       "  'thread_muted': False,\n",
+       "  'py_type': 'app.bsky.feed.defs#viewerState'},\n",
+       " 'py_type': 'app.bsky.feed.defs#postView'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_dict['posts'][1]['record']"
+    "results_dict['posts'][2]"
    ]
   },
   {
@@ -1315,7 +1350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unalive_top_df.to_csv('unalive_top_posts.csv', index=False)"
+    "#unalive_top_df.to_csv('unalive_top_posts.csv', index=False)"
    ]
   },
   {
