cleaned the notebooks

--- a/coded_data_viz.ipynb
+++ b/coded_data_viz.ipynb
@@ -7,9 +7,15 @@
    "source": [
     "# Coded Data Viz and Exploration\n",
     "This Jupyter notebook is mainly to look at my data now that it has been qualitatively coded!\n",
-    "This is a new, continuing script.\n",
+    "This is a new, continuing script.  \n",
     "\n",
-    "## Qualitative Coding\n",
+    "**Contents**\n",
+    "- [1 Qualitative Coding](#1-Qualitative-Coding)\n",
+    "- [2 Exploration of the algospeak data](#2-Exploration-of-the-algospeak-data)\n",
+    "- [3 Looking at the unalive dataset](#3-Looking-at-the-unalive-dataset)\n",
+    "  - [3.1 Looking at replace_code and topic_code](#3.1-Looking-at-replace_code-and-topic_code)\n",
+    "\n",
+    "## 1 Qualitative Coding\n",
     "Unlike coding with something like Python, qualitative coding here is basically just giving an item a discrete value based on some property. In this project, I am looking at how people use algopseak, so my the codes listed in the mention_code column of my CSV/dataframe are split up into four categories of use. \n",
     "| Code      | Meaning                                                                                                               |\n",
     "|-----------|-----------------------------------------------------------------------------------------------------------------------|\n",
@@ -18,7 +24,7 @@
     "| n         | not algospeak - The term is not being used as an algospeak term                                                       |\n",
     "| o         | other - Term is not present or something else                                                                         |\n",
     "\n",
-    "## Exploration"
+    "## 2 Exploration of the algospeak data"
    ]
   },
   {
@@ -91,16 +97,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>Introducing the Kanga-You soda! Turns the person into a bouncy marsupial for a month~\\n\\nCurrently comes in grape flavor, share with your friends!\\n\\n(Done for RonanRaccoon)\\n\\n#StealthyStripesArt, #tf</td>\n",
-       "      <td>grape</td>\n",
+       "      <th>144</th>\n",
+       "      <td>The Disregarded Watermelon.\\n\\nOne of my favorite photos made at Jordan Street and also one of my favorite titles given to a piece of my artwork.\\n\\nModel is Stephanie Anne, April 2009.\\n#artnude\\n#fineartnude\\n#studiowork</td>\n",
+       "      <td>watermelon</td>\n",
        "      <td>n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>I’m proud to say I’m blocked on Twitter by the deputy director of the fbi because I made a joke about his head being shaped like a square watermelon 🍉 😎</td>\n",
-       "      <td>watermelon</td>\n",
-       "      <td>n</td>\n",
+       "      <th>58</th>\n",
+       "      <td>Atsuoi dragon seggs sneak peek for #WIPwednesday !!</td>\n",
+       "      <td>seggs</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>Respectfully submitted for your approval for, Turquoise.  Another from my Island Life Series, oil on Gessoboard, 8”\\nx 10” Title: “Beached”\\n#Februarty2025, #artyear #artshare #artfeed #artmutuals</td>\n",
+       "      <td>palm colored</td>\n",
+       "      <td>o</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>94</th>\n",
@@ -109,35 +121,29 @@
        "      <td>o</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>Taught one of my white friends the phrase \"palm-colored people\" and she loved it lol</td>\n",
-       "      <td>palm colored</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>the gift arts! \\nHere is a sweetie - @hanapregs.bsky.social \\n\\nShes super cute and does some delightful and adorable tum arts!</td>\n",
+       "      <th>147</th>\n",
+       "      <td>Watermelon coded for @/TheEvieka</td>\n",
        "      <td>watermelon</td>\n",
-       "      <td>o</td>\n",
+       "      <td>n</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                          text  \\\n",
-       "78   Introducing the Kanga-You soda! Turns the person into a bouncy marsupial for a month~\\n\\nCurrently comes in grape flavor, share with your friends!\\n\\n(Done for RonanRaccoon)\\n\\n#StealthyStripesArt, #tf   \n",
-       "128                                                   I’m proud to say I’m blocked on Twitter by the deputy director of the fbi because I made a joke about his head being shaped like a square watermelon 🍉 😎   \n",
-       "94                                                                                                                                                               I’m here, in spirit 🏝️\\n#photography\\n#nature   \n",
-       "103                                                                                                                       Taught one of my white friends the phrase \"palm-colored people\" and she loved it lol   \n",
-       "137                                                                            the gift arts! \\nHere is a sweetie - @hanapregs.bsky.social \\n\\nShes super cute and does some delightful and adorable tum arts!   \n",
+       "                                                                                                                                                                                                                               text  \\\n",
+       "144  The Disregarded Watermelon.\\n\\nOne of my favorite photos made at Jordan Street and also one of my favorite titles given to a piece of my artwork.\\n\\nModel is Stephanie Anne, April 2009.\\n#artnude\\n#fineartnude\\n#studiowork   \n",
+       "58                                                                                                                                                                              Atsuoi dragon seggs sneak peek for #WIPwednesday !!   \n",
+       "90                             Respectfully submitted for your approval for, Turquoise.  Another from my Island Life Series, oil on Gessoboard, 8”\\nx 10” Title: “Beached”\\n#Februarty2025, #artyear #artshare #artfeed #artmutuals   \n",
+       "94                                                                                                                                                                                    I’m here, in spirit 🏝️\\n#photography\\n#nature   \n",
+       "147                                                                                                                                                                                                Watermelon coded for @/TheEvieka   \n",
        "\n",
        "            query mention_code  \n",
-       "78          grape            n  \n",
-       "128    watermelon            n  \n",
+       "144    watermelon            n  \n",
+       "58          seggs            a  \n",
+       "90   palm colored            o  \n",
        "94   palm colored            o  \n",
-       "103  palm colored            m  \n",
-       "137    watermelon            o  "
+       "147    watermelon            n  "
       ]
      },
      "execution_count": 3,
@@ -444,7 +450,7 @@
    "id": "eab913ed-e2db-4092-a778-b1f810f79156",
    "metadata": {},
    "source": [
-    "## Looking at the \"unalive\" dataset\n",
+    "## 3 Looking at the unalive dataset\n",
     "Coded the same way but it's just unalive now"
    ]
   },
@@ -600,7 +606,7 @@
    "id": "947ed5e2-46ad-4fc4-9a02-6fe0f0e467cf",
    "metadata": {},
    "source": [
-    "### Looking at replace_code and topic_code\n",
+    "### 3.1 Looking at replace_code and topic_code\n",
     "I added some more columns of qualitative coding, the replace_code column and topic_code column.\n",
     "- The replace_code column just contains what unalive is replacing/censoring if it is used in a sentence and not just mentioned.\n",
     "      - For instance if the post says \"I will unalive you\" the replace_code is \"kill\".\n",
