--- a/getting_bsky_data.ipynb
+++ b/getting_bsky_data.ipynb
@@ -7,7 +7,13 @@
    "source": [
     "# Getting Bsky Data\n",
     "Sara Rosenau 2/21/2025  \n",
-    "This notebook will feature me trying to learn the Bsky API and collect some data from it"
+    "This notebook will feature me trying to learn the Bsky API and collect some data from it\n",
+    "\n",
+    "**Contents**\n",
+    "- [1 Logging into the api](#1-Logging-into-the-api)\n",
+    "- [2 Getting data](#2-Getting-data)\n",
+    "- [3 Making it into a CSV](#3-Making-it-into-a-CSV)\n",
+    "- [4 Data Stats](#4-Data-Stats)"
    ]
   },
   {
@@ -15,7 +21,7 @@
    "id": "26747c78-100a-423c-a318-a522807209f6",
    "metadata": {},
    "source": [
-    "## Playing around with the api a bit\n",
+    "## 1 Logging into the api\n",
     "- First, import the api (`atproto`) and start a new client session"
    ]
   },
@@ -56,192 +62,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51879782-555d-40a7-9f6f-747c14c0f2f1",
-   "metadata": {},
-   "source": [
-    "### Making a post from the api!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4b54deb4-8919-4d05-8d85-ebec317a550f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#client.send_post(text='testing api') # this works but commenting it out so I don't post every time I run it"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "221c43c0-5404-44f4-8410-7702a47a03ca",
-   "metadata": {},
-   "source": [
-    "### Getting posts from my timeline\n",
-    "- Following [this example](https://github.com/MarshalX/atproto/blob/main/examples/home_timeline.py)\n",
-    "- Getting 10 posts from my following feed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "000bbeea-9079-4282-b309-8cbee0732b70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main() -> None:\n",
-    "    print('Home (Following):\\n')\n",
-    "\n",
-    "    timeline = client.get_timeline(limit=10, algorithm='reverse-chronological')\n",
-    "    for feed_view in timeline.feed:\n",
-    "        action = 'New Post'\n",
-    "        if feed_view.reason:\n",
-    "            action_by = feed_view.reason.by.handle\n",
-    "            action = f'Reposted by @{action_by}'\n",
-    "\n",
-    "        post = feed_view.post.record\n",
-    "        author = feed_view.post.author\n",
-    "\n",
-    "        print(f'[{action}] {author.display_name}: {post.text}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a582905f-d5b6-49dc-b381-7e47a38490c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Home (Following):\n",
-      "\n",
-      "[Reposted by @sarahmackattack.bsky.social] Skype a Scientist: Teachers- has the Trump administation affected your ability to incorporate programs like Skype a Scientist into your classrooms, directly or indirectly?\n",
-      "\n",
-      "If you don't want to reply publicly, DMs open.\n",
-      "\n",
-      "We're trying to figure out how to best serve you amidst the anti-science chaos in the US.\n",
-      "[New Post] Kat Tenbarge: As many people have pointed out, cases like Blake Lively and Amber Heard function as a liberal to alt-right pipeline, especially for women. Celebrity women are test subjects for modern smear campaign tactics based on media manipulation and misogyny.\n",
-      "spitfirenews.com/p/the-blake-...\n",
-      "[Reposted by @lauren.rotatingsandwiches.com] Micah: this is a really an unfathomable level of evil\n",
-      "\n",
-      "“shut off all foreign aid” is of course just as evil but it’s a blunt instrument, where you don’t have to directly face the specific programs you’re killing\n",
-      "\n",
-      "but these little fucks were manually vetoing PEPFAR time and again\n",
-      "[Reposted by @ajaanmark.bsky.social] The Digital Orientalist : 🗃️ In this post James Morris introduces different tools developed by ROIScodh (ROIS-DS Centre for Open Data in the Humanities)🏺and #DHII for helping to decipher Japanese #seals ⛩️ #篆書体 #印鑑 #蔵書印 #Stamps #japan #japanese #language #digitaltools #digitalhumanities \n",
-      "\n",
-      "digitalorientalist.com/2025/02/25/d...\n",
-      "[Reposted by @lromeranth.bsky.social] Chanda Prescod-Weinstein 🌌: The Liberals replying to Palestinian Americans by pestering them about protests and voting are acting like vile monsters, like the ones they complain about\n",
-      "[New Post] Rev. Poppy Haze 𓅋: Chainsaw Man updates biweekly except during action scenes where it’s weekly. The latest 3 chapters are on Shounen Jump for free  www.viz.com/shonenjump/c...\n",
-      "[Reposted by @guillotineshout.bsky.social] beccadagoo: old person living in poverty: who the fuck cut my social security?\n",
-      "\n",
-      "underpaid government worker: sorry it was DOGE\n",
-      "\n",
-      "old person: doge? like the meme?\n",
-      "\n",
-      "worker: yeah\n",
-      "\n",
-      "old: omg that's actually really funny. like such wow. have a great day\n",
-      "[New Post] daniel sieradski: \"you're locked in a battle with nefarious powers trying to manipulate you and turn you against your fellow man in a zero sum game for their personal enrichment and it's up to you to break their spell over humanity in order to save the world from certain doom. now, here are your cognitive biases...\"\n",
-      "[New Post] Marisa Kabas: if i’m a judge, im throwing these dumbshits in jail until they can provide an answer. but i’m just a humble blogger.\n",
-      "[Reposted by @jewishcurrents.bsky.social] Line Bech Nielsen: Fremragende artikel, der med nuancer og perspektiver giver håb om et frit Palæstina. @arthurasseraf.bsky.social\n"
-     ]
-    }
-   ],
-   "source": [
-    "main()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d02545c-c3b0-416c-a449-8e947dde468f",
-   "metadata": {},
-   "source": [
-    "### Trying a search\n",
-    "- just trying to get a hang of what is going on with the `client.app.bsky.feed.search_posts()`\n",
-    "  - turns out that it returns a Response type object and the api is built on something called \"pydantic\"\n",
-    "  - `object.model_dump()` returns a dictionary with a list of posts and then a dictionary for each post containing a lot of metadata\n",
-    "  - with a for loop and some indexing we can get all the info we need!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "522fcde1-16e9-4748-8a3d-9ce564f8224d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8bb35508-a866-4944-9e4c-e42b40e8efd7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_search(query):\n",
-    "    print(query, 'Search Results:\\n')\n",
-    "    results = client.app.bsky.feed.search_posts({'q': query, 'limit': 10, 'sort': 'top'})\n",
-    "    results_dict = results.model_dump()\n",
-    "    for post in results_dict['posts']:\n",
-    "        text = post['record']['text']\n",
-    "        author = post['author']['handle']\n",
-    "        print(author+':', text+'\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3157d23b-28f6-4ee3-af5c-2332c1ed90b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "unalive Search Results:\n",
-      "\n",
-      "maiamindel.bsky.social: \"Orange Man Bad\" and \"Unalive the Boer\" are universal truths that all living beings are innately attuned to. Like a message from the Creator\n",
-      "\n",
-      "adrierising.bsky.social: please for the love of god can we NOT normalise using \"sw\" and \"unalive\" on this app? use real words.\n",
-      "sex work.\n",
-      "kill.\n",
-      "cunt.\n",
-      "\n",
-      "there's no algorithm here.\n",
-      "\n",
-      "authorreneeb.bsky.social: Good morning to everyone except Asian Doll who openly admitted to trying to unalive Kash Doll over a damn name during BHM. 🤦🏿‍♀️\n",
-      "\n",
-      "vitaminpac1.bsky.social: Why did I marry someone who picks the WORST FUCKING MOVIES\n",
-      "\n",
-      "My god I either want to die of boredom, want to unalive myself, or am too confused to decide\n",
-      "\n",
-      "baratiddys.bsky.social: postponing my unalive\n",
-      "\n",
-      "witchnwords.bsky.social: Love it when you're drinking and suddenly your body forgets the correct procedure for swallowing and you attempt to accidentally unalive yourself.\n",
-      "\n",
-      "aliothfox.ursamajorartworks.com: Y'all, please stop saying \"unalive\" and \"self-delete\" and so forth. There's no algorithm to fight here and a lot of people have the word \"suicide\" muted for a reason. The euphemisms are neither cute nor helpful.\n",
-      "\n",
-      "kingserpentico.bsky.social: I *AM* on vacation and people still wanna unalive me at work.\n",
-      "\n",
-      "usakoing.bsky.social: Chat if I unalive myself\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_search('unalive')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "30b0599c-a74b-44bb-9ae2-f4e1a707f2ae",
    "metadata": {},
    "source": [
-    "## Getting some actual data\n",
+    "## 2 Getting data\n",
     "- Building a function called `search2df_top()` that is pretty similar to the `print_search()` function above\n",
     "    - makes a list of dictionaries for each post containing the metadata I might want for each search term such as author, date, likes, reposts, etc.\n",
     "    - then converts it into a pandas DataFrame!\n",
@@ -1074,7 +898,7 @@
    "id": "78f61d5c-e8da-46b2-b051-a512df3c7783",
    "metadata": {},
    "source": [
-    "## Making it into a CSV\n",
+    "## 3 Making it into a CSV\n",
     "- Concatenating all the dfs into one, then exporting into a csv"
    ]
   },
@@ -1446,7 +1270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "algospeak_top_df.to_csv('algospeak_top_posts.csv', index=False)"
+    "# algospeak_top_df.to_csv('algospeak_top_posts.csv', index=False)"
    ]
   },
   {
@@ -1454,7 +1278,7 @@
    "id": "470315fe-e02c-4be5-a88c-e71e1286117e",
    "metadata": {},
    "source": [
-    "## Data Stats"
+    "## 4 Data Stats"
    ]
   },
   {
